# traceax

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy_docs.yml
_static/: custom_css.css
api/estimators/: index.html
api/samplers/: index.html
authors/: index.html
conduct/: index.html
docs/: authors.md  cite.md  conduct.md  index.md  license.md  requirements.txt  versions.md
docs/_static/: custom_css.css
docs/api/: estimators.md  samplers.md
docs/scripts/: extension.py
docs/templates/python/material/: class.html.jinja  signature.html.jinja
license/: index.html
search/: search_index.json
src/traceax/: __init__.py  _estimators.py  _samplers.py  _solution.py  _trace.py  _utils.py
tests/: __init__.py  conftest.py  helpers.py  test_trace.py
